<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:id="@+id/activity_main_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/myNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundFoto"
            android:paddingStart="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/myname"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myNameView"
            android:background="@color/colorBackgroundFoto"
            android:contentDescription="@string/image_description"
            android:src="@mipmap/main_pic"
            android:scaleType=""/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:weightSum="60">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="20"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="28dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/my_achieves"
                    android:src="@drawable/account_star" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/imageView2"
                    android:text="@string/position"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="20"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="28dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/my_achieves"
                    android:src="@drawable/trophy_variant_outline" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:text="@string/interests"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="20"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="28dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/my_achieves"
                    android:src="@drawable/hockey_puck" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="@string/hobby"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp">

            </View>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="10"
                android:text="@string/my_resume" />


            <View
                style="@style/Divider"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="15dp">

            </View>

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px" />

            <EditText
                android:id="@+id/mailAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="10"
                android:autofillHints="yes"
                android:ems="10"
                android:importantForAutofill="auto"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/red" />

            <Button
                android:id="@+id/buttonSendMessage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="20"
                android:background="@color/colorPrimary"
                android:shadowRadius="0"
                android:text="@string/send_message"
                android:textColor="@color/red" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/buttonTelegram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/telegramButtonText"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/telegram" />

                <ImageButton
                    android:id="@+id/buttonInstagram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/instagramButtonText"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/instagram" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


</ScrollView>